* Moved to Neo Forge * Updated to Minecraft 1.21.1 * Added small config